// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correct dialog after creating a new account 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 1024px;
  min-width: 584px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 8px;
  overflow: hidden;
}

.c5 {
  box-sizing: border-box;
  min-width: 584px;
  padding: 32px;
  background-color: #222C59;
  flex: 4;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
}

.c12 {
  box-sizing: border-box;
  padding: 8px;
  padding-bottom: 24px;
  padding-left: 16px;
  background-color: #0C143D;
  border-radius: 8px;
}

.c15 {
  box-sizing: border-box;
  margin-left: 8px;
}

.c20 {
  box-sizing: border-box;
  min-width: 384px;
  padding: 32px;
  flex: 2;
}

.c22 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c16:focus-visible,
.teleport-button__force-focus-visible .c16 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c16:hover,
.teleport-button__force-hover .c16 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c16:active,
.teleport-button__force-active .c16 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c16:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-top: 8px;
}

.c18:focus-visible,
.teleport-button__force-focus-visible .c18 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c18:hover,
.teleport-button__force-hover .c18 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c18:active,
.teleport-button__force-active .c18 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c18:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  margin-top: 40px;
  width: 100%;
}

.c19:focus-visible,
.teleport-button__force-focus-visible .c19 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c19:hover,
.teleport-button__force-hover .c19 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c19:active,
.teleport-button__force-active .c19 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c19:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c4 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 12px;
  line-height: 20px;
  letter-spacing: 0.03px;
  text-transform: uppercase;
  margin-bottom: 16px;
  color: #FFFFFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 4px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  text-transform: uppercase;
  font-weight: 600;
  margin-bottom: 8px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-top: 8px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 12px;
  line-height: 20px;
  letter-spacing: 0.03px;
  text-transform: uppercase;
  margin-bottom: 8px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  color: rgba(255, 255, 255, 0.72);
}

.c3 {
  display: flex;
  flex-wrap: wrap;
}

.c6 {
  display: flex;
  flex-direction: column;
}

.c13 {
  display: flex;
  justify-content: space-between;
}

.c1 .print-only {
  visibility: hidden;
}

.c17 {
  max-width: 48px;
  width: 100%;
  padding: 4px 8px;
  min-height: 10px;
  font-size: 10px;
}

.c21 {
  background: rgba(255,255,255,0.07);
}

@media print {
  .c1 {
    overflow: hidden;
  }

  .c1 .print,
  .c1 .print-only {
    visibility: visible;
  }

  .c1 .no-print {
    visibility: hidden;
  }

  .c1 .codes {
    font-size: 16px;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3 sc-gEvDqW c2 c4 no-print"
    overflow="hidden"
  >
    <div
      class="c5 c6 print"
    >
      <div
        class="c7"
      >
        <div
          class="c8"
          color="text.main"
        >
          Backup & Recovery Codes
        </div>
        <div
          class="c9"
        >
          Please save these account recovery codes in a safe offline place.
        </div>
        <div
          class="c10"
        >
          You can use each code once if you lose your second factor authenticator or password.
        </div>
      </div>
      <div
        class="c0"
      >
        <div
          class="c11"
        >
          Recovery Codes (
          3
           Total)
        </div>
        <div
          class="c12 c13"
        >
          <div
            class="c14 codes"
            style="white-space: pre-wrap;"
          >
            tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword
          </div>
          <div
            class="c15 c6 no-print"
          >
            <button
              class="c16 c17"
              fill="filled"
            >
              COPY
            </button>
            <button
              class="c18 c17"
              fill="filled"
            >
              PRINT
            </button>
          </div>
        </div>
        <div
          class="c10 print-only"
        >
          Created: Fri Aug 30 2019 11:00:00 GMT+0000 (Coordinated Universal Time)
        </div>
        <button
          class="c19 no-print"
          fill="filled"
          width="100%"
        >
          I have saved my Recovery Codes - Continue
        </button>
      </div>
    </div>
    <div
      class="c20 c6 c21"
    >
      <div
        class="c22"
      >
        <div
          class="c23"
        >
          Why do I need these codes?
        </div>
        <div
          class="c24"
          color="text.slightlyMuted"
        >
          Use them in the event of losing your password or two-factor device.
        </div>
      </div>
      <div
        class="c22"
      >
        <div
          class="c23"
        >
          How long do the codes last for?
        </div>
        <div
          class="c24"
          color="text.slightlyMuted"
        >
          Recovery codes can only be used once. After recovering your account, we will generate a new set of codes for you.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render correct dialog after resetting account 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 1024px;
  min-width: 584px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 8px;
  overflow: hidden;
}

.c5 {
  box-sizing: border-box;
  min-width: 584px;
  padding: 32px;
  background-color: #222C59;
  flex: 4;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
}

.c12 {
  box-sizing: border-box;
  padding: 8px;
  padding-bottom: 24px;
  padding-left: 16px;
  background-color: #0C143D;
  border-radius: 8px;
}

.c15 {
  box-sizing: border-box;
  margin-left: 8px;
}

.c20 {
  box-sizing: border-box;
  min-width: 384px;
  padding: 32px;
  flex: 2;
}

.c22 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c16:focus-visible,
.teleport-button__force-focus-visible .c16 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c16:hover,
.teleport-button__force-hover .c16 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c16:active,
.teleport-button__force-active .c16 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c16:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-top: 8px;
}

.c18:focus-visible,
.teleport-button__force-focus-visible .c18 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c18:hover,
.teleport-button__force-hover .c18 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c18:active,
.teleport-button__force-active .c18 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c18:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  margin-top: 40px;
  width: 100%;
}

.c19:focus-visible,
.teleport-button__force-focus-visible .c19 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c19:hover,
.teleport-button__force-hover .c19 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c19:active,
.teleport-button__force-active .c19 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c19:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c4 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 12px;
  line-height: 20px;
  letter-spacing: 0.03px;
  text-transform: uppercase;
  margin-bottom: 16px;
  color: #FFFFFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 4px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  text-transform: uppercase;
  font-weight: 600;
  margin-bottom: 8px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-top: 8px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 12px;
  line-height: 20px;
  letter-spacing: 0.03px;
  text-transform: uppercase;
  margin-bottom: 8px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  color: rgba(255, 255, 255, 0.72);
}

.c3 {
  display: flex;
  flex-wrap: wrap;
}

.c6 {
  display: flex;
  flex-direction: column;
}

.c13 {
  display: flex;
  justify-content: space-between;
}

.c1 .print-only {
  visibility: hidden;
}

.c17 {
  max-width: 48px;
  width: 100%;
  padding: 4px 8px;
  min-height: 10px;
  font-size: 10px;
}

.c21 {
  background: rgba(255,255,255,0.07);
}

@media print {
  .c1 {
    overflow: hidden;
  }

  .c1 .print,
  .c1 .print-only {
    visibility: visible;
  }

  .c1 .no-print {
    visibility: hidden;
  }

  .c1 .codes {
    font-size: 16px;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3 sc-gEvDqW c2 c4 no-print"
    overflow="hidden"
  >
    <div
      class="c5 c6 print"
    >
      <div
        class="c7"
      >
        <div
          class="c8"
          color="text.main"
        >
          New Backup & Recovery Codes
        </div>
        <div
          class="c9"
        >
          Please save these account recovery codes in a safe offline place.
        </div>
        <div
          class="c10"
        >
          You can use each code once if you lose your second factor authenticator or password.
        </div>
      </div>
      <div
        class="c0"
      >
        <div
          class="c11"
        >
          Recovery Codes (
          3
           Total)
        </div>
        <div
          class="c12 c13"
        >
          <div
            class="c14 codes"
            style="white-space: pre-wrap;"
          >
            tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword
          </div>
          <div
            class="c15 c6 no-print"
          >
            <button
              class="c16 c17"
              fill="filled"
            >
              COPY
            </button>
            <button
              class="c18 c17"
              fill="filled"
            >
              PRINT
            </button>
          </div>
        </div>
        <div
          class="c10 print-only"
        >
          Created: Fri Aug 30 2019 11:00:00 GMT+0000 (Coordinated Universal Time)
        </div>
        <button
          class="c19 no-print"
          fill="filled"
          width="100%"
        >
          I have saved my new Recovery Codes - Return to login
        </button>
      </div>
    </div>
    <div
      class="c20 c6 c21"
    >
      <div
        class="c22"
      >
        <div
          class="c23"
        >
          Why do I need these codes?
        </div>
        <div
          class="c24"
          color="text.slightlyMuted"
        >
          Use them in the event of losing your password or two-factor device.
        </div>
      </div>
      <div
        class="c22"
      >
        <div
          class="c23"
        >
          How long do the codes last for?
        </div>
        <div
          class="c24"
          color="text.slightlyMuted"
        >
          Recovery codes can only be used once. After recovering your account, we will generate a new set of codes for you.
        </div>
      </div>
      <div
        class="c0"
      >
        <div
          class="c23"
        >
          What about my old codes?
        </div>
        <div
          class="c24"
          color="text.slightlyMuted"
        >
          Your old recovery codes are no longer valid, please replace them with these new ones.
        </div>
      </div>
    </div>
  </div>
</div>
`;
